# stellacode

./: .buildinfo  .gitignore  .gitlab-ci.yml  LICENSE  README.md  Readme.md  Readme.txt  changelog.md  concepts.md  error.md  genindex.html  index.html  launcher.py  logging.conf  objects.inv  output_test  output_test2  py-modindex.html  pyproject.toml  search.html  searchindex.js  show_simu.ipynb  surf_test.txt  tests.py
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/sources/: configurations.doctree  contribute.doctree  installation.doctree  license.doctree  uninstall.doctree
.github/workflows/: docs.yml
.ipynb_checkpoints/: show_simu-checkpoint.ipynb
_sources/sources/: contribute.rst.txt
autoapi/: index.html
autoapi/src/: index.html
config_file/: config.ini  config_full.ini  config_loris.ini  config_small.ini  config_small_debug.ini  config_test.ini  config_test_dim.ini
config_loris/: config_conformal.ini  config_hsr3_conformal.ini  config_hsr3_h3_elltri.ini  config_hsr3_h3_elltri_3.ini  config_hsr3_h3_fourier.ini  config_hsr3_h_elltri_3.ini  config_hsr4_conformal.ini  config_hsr4_elltri.ini  config_hsr4_elltri_146.ini  config_hsr4_elltri_146_for_opti.ini  config_hsr4_fourier.ini  config_original_hsr3.ini  config_pwc_ell.ini  config_test_pwc_elltri.ini  config_test_pwc_elltri_3.ini  config_test_pwc_fourier.ini  config_test_pwc_fourier_3.ini  config_w7x_conformal.ini
data/: full_shape_grad.npy  hts_params_jeroen.xlsx  wout_hsr3_lf_scaled_xvmec_varA_h_b1_000_000000.nc
data/HSX_QHS_vac_ns201_fixed/: bnorm.HSX_QHS_vacuum_ns201  nescin.HSX_QHS_vacuum_ns201
data/cws/: cws_conformal_hsr4.txt  nescin.out  nescin_conf_hsr3.out  (+16 more)
docs/: conf.py  index.rst
examples/: First_steps_with_Stellacode.ipynb  Untitled-Copy1.ipynb  optimisation.ipynb  plot_CWS.py  plot_surface_comparison.py  plot_test_rotation.py  profiler-leto.ipynb  profiler.ipynb  regcoil.ipynb  test_gradient_shape_opti.ipynb  tutorial_compute_cost_surface.ipynb
main/: bnorm.py  cost_surface.py  full_gradient.py  regcoil.py  shape_gradient.py  shape_gradient_dask.py  shape_opti.py  test_cost_surface.py  test_full_gradient.py  test_shape_gradient.py  test_shape_opti.py  test_toroidal_surface.py  tools.py  toroidal_surface.py  vector_field.py
scripts/: plot_surfaces.py  regcoil_vs_lambda.py
sources/: configurations.html  contribute.html  installation.html  license.html  uninstall.html
src/: full_gradient.py
stellacode/: __init__.py  definitions.py  launcher.py  optimizer.py
stellacode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stellopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: graphic_curvature_test.py  test_EM_cost.py  test_EM_shape_gradient.py  test_against_np_grad.py  test_compare_axis_cyl.py  test_current.py  test_curvature_shape_gradient.py  test_cylinder.py  test_cylinder_coil.py  test_dft.py  test_double_torus.py  test_elasticity.py  test_em_cost.py  test_fourier_series.py  test_free_cylinder_optim.py  test_full_gradient.py  test_full_shape_gradient.py  test_geometries.py  test_laplace_force.py  test_non_axisymmetric_cylinders.py  test_numerical_gradient_cost.py  test_optim.py  test_plots.py  test_regcoil.py  test_scale_dict.py  test_shape_gradient_dask.py  test_surface_Fourier.py  test_surface_tools.py  test_vmec.py
tutorials/: HTS_tests.ipynb  current_tests.ipynb  optim_pwc.ipynb  optim_toroidal.ipynb  optimisation.ipynb  regcoil.ipynb  tools_demo.ipynb
(+223 files in other folders)
