[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[metadata]
name = "stellacode"

[project]
name = "stellacode"
version = "1.1.0"
license = {file = "LICENSE"}
authors = [
    {name = "Rémi Robin", email = "remi.robin@inria.fr"},
]
description = "Stellarator coils optimization."
readme = "Readme.md"
requires-python = ">=3.7"
keywords = ["stellarator", "coils"]
dependencies = [
    "matplotlib",
    "numpy",
    "opt-einsum",
    "scipy",
    "plotly",
    "nbformat",
    "jax",
    "jaxlib",
    "pydantic",
    "concave_hull",
    "autograd_minimize",
]

[project.optional-dependencies]
test = [
    "pytest", "flake8", "mypy", "isort", "black", "coverage"
]
doc = ["sphinx-autoapi", 
        "nbsphinx",
        "nbsphinx-link",
        "pandoc"]

[project.urls]
Documentation = "https://rrobin.pages.math.cnrs.fr/stellacode/sources/tutorials/quickstart.html"
Source = "https://github.com/rob3315/stellacode/"

[project.scripts]

[tool.setuptools]
py-modules = ["stellacode"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stellacode*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
